--- a/Solution/Source/NCore/NCore.csproj
+++ b/Solution/Source/NCore/NCore.csproj
@@ -38,12 +38,12 @@
   <ItemGroup>
     <Compile Include="Exceptions.cs" />
     <Compile Include="DefaultFormatting.cs" />
+    <Compile Include="Expressions\ExpressionExtensions.cs" />
     <Compile Include="IFormatting.cs" />
     <Compile Include="IStringConverter.cs" />
     <Compile Include="NCoreException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringConverter.cs" />
-    <Compile Include="Sys.cs" />
     <Compile Include="TypeExtensions.cs" />
     <Compile Include="Validation\EnsureExtensions.cs" />
     <Compile Include="Resources\ExceptionMessages.Designer.cs">
