--- a/Solution/Source/NCore/NCore.csproj
+++ b/Solution/Source/NCore/NCore.csproj
@@ -49,13 +49,20 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringConverter.cs" />
     <Compile Include="TypeExtensions.cs" />
-    <Compile Include="Validation\EnsureExtensions.cs" />
+    <Compile Include="Validation\Ensure.cs" />
+    <Compile Include="Validation\EnsureCollectionExtensions.cs" />
+    <Compile Include="Validation\EnsureExpressionExtensions.cs" />
     <Compile Include="Resources\ExceptionMessages.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>ExceptionMessages.resx</DependentUpon>
     </Compile>
     <Compile Include="StringExtensions.cs" />
+    <Compile Include="Validation\EnsureGuidExtensions.cs" />
+    <Compile Include="Validation\EnsureNumericExtensions.cs" />
+    <Compile Include="Validation\EnsureObjectExtensions.cs" />
+    <Compile Include="Validation\EnsureStringExtensions.cs" />
+    <Compile Include="Validation\Param.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\ExceptionMessages.resx">
