--- a/Solution/Source/NCore/NCore.csproj
+++ b/Solution/Source/NCore/NCore.csproj
@@ -48,7 +48,7 @@
     <Compile Include="NCoreException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringConverter.cs" />
-    <Compile Include="TypeExtensions.cs" />
+    <Compile Include="Reflections\TypeExtensions.cs" />
     <Compile Include="Validation\Ensure.cs" />
     <Compile Include="Validation\EnsureCollectionExtensions.cs" />
     <Compile Include="Validation\EnsureExpressionExtensions.cs" />
