--- a/Solution/Tests/NCore.Tests.UnitTests/NCore.Tests.UnitTests.csproj
+++ b/Solution/Tests/NCore.Tests.UnitTests/NCore.Tests.UnitTests.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Expressions\ExpressionExtensionsTests.cs" />
+    <Compile Include="Reflections\TypeExtensionsIsFubuTypeTests.cs" />
     <Compile Include="StringConverterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reflections\TypeExtensionsEnumerableTests.cs" />
