--- a/Solution/Tests/NCore.Tests.UnitTests/NCore.Tests.UnitTests.csproj
+++ b/Solution/Tests/NCore.Tests.UnitTests/NCore.Tests.UnitTests.csproj
@@ -48,6 +48,7 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Collections\DictionaryExtensionsTests.cs" />
     <Compile Include="Expressions\ExpressionExtensionsTests.cs" />
     <Compile Include="Reflections\TypeExtensionsIsFubuTypeTests.cs" />
     <Compile Include="StringConverterTests.cs" />
