[New]: Validation of types.

--- a/Solution/Tests/NCore.Tests.UnitTests/NCore.Tests.UnitTests.csproj
+++ b/Solution/Tests/NCore.Tests.UnitTests/NCore.Tests.UnitTests.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Validation\EnsureNumericParamTests.cs" />
     <Compile Include="Validation\EnsureObjectParamTests.cs" />
     <Compile Include="Validation\EnsureStringParamTests.cs" />
+    <Compile Include="Validation\EnsureTypeParamTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Source\NCore\NCore.csproj">
