--- a/Solution/Source/NCore/NCore.csproj
+++ b/Solution/Source/NCore/NCore.csproj
@@ -62,13 +62,16 @@
     <Compile Include="Validation\EnsureNumericExtensions.cs" />
     <Compile Include="Validation\EnsureObjectExtensions.cs" />
     <Compile Include="Validation\EnsureStringExtensions.cs" />
+    <Compile Include="Validation\EnsureTypeExtensions.cs" />
     <Compile Include="Validation\ExpressionParam.cs" />
     <Compile Include="Validation\Param.cs" />
+    <Compile Include="Validation\TypeParam.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\ExceptionMessages.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>ExceptionMessages.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
