--- a/Solution/Tests/NCore.Tests.UnitTests/NCore.Tests.UnitTests.csproj
+++ b/Solution/Tests/NCore.Tests.UnitTests/NCore.Tests.UnitTests.csproj
@@ -62,8 +62,9 @@
     <Compile Include="StringExtensionsTests.cs" />
     <Compile Include="UnitTestBase.cs" />
     <Compile Include="Validation\EnsureCollectionParamsTests.cs" />
-    <Compile Include="Validation\EnsureExpressionParamTests.cs" />
+    <Compile Include="Validation\EnsureBoolParamTests.cs" />
     <Compile Include="Validation\EnsureGuidParamTests.cs" />
+    <Compile Include="Validation\ParamCreationTests.cs" />
     <Compile Include="Validation\EnsureNumericParamTests.cs" />
     <Compile Include="Validation\EnsureObjectParamTests.cs" />
     <Compile Include="Validation\EnsureStringParamTests.cs" />
