--- a/Deploy/NCore.nuspec
+++ b/Deploy/NCore.nuspec
@@ -10,8 +10,8 @@
     <description>
 		Contains helpers, utils and extensions to simplify the daily work.
 	</description>
-	<projectUrl>http://github.com/sedanwer/ncore</projectUrl>
-	<licenseUrl>http://github.com/sedanwer/ncore/blob/master/Solution/License-NCore.txt</licenseUrl>
+	<projectUrl>http://github.com/danielwertheim/ncore</projectUrl>
+	<licenseUrl>http://github.com/danielwertheim/ncore/blob/master/Solution/License-NCore.txt</licenseUrl>
 	<requireLicenseAcceptance>false</requireLicenseAcceptance>
 	<tags>core,utils,helpers,extensions</tags>
   </metadata>
