--- a/Solution/Tests/NCore.Tests.UnitTests/NCore.Tests.UnitTests.csproj
+++ b/Solution/Tests/NCore.Tests.UnitTests/NCore.Tests.UnitTests.csproj
@@ -48,6 +48,9 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Collections\DictionaryExtensionsTests.cs" />
     <Compile Include="Expressions\ExpressionExtensionsTests.cs" />
     <Compile Include="Reflections\TypeExtensionsIsFubuTypeTests.cs" />
