--- a/Source/Tests/NCore.Tests.UnitTests/NCore.Tests.UnitTests.csproj
+++ b/Source/Tests/NCore.Tests.UnitTests/NCore.Tests.UnitTests.csproj
@@ -52,6 +52,7 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Collections\DictionaryExtensionsTests.cs" />
+    <Compile Include="Cryptography\HashServiceTests.cs" />
     <Compile Include="Expressions\ExpressionExtensionsTests.cs" />
     <Compile Include="Reflections\TypeExtensionsIsFubuTypeTests.cs" />
     <Compile Include="StringConverterTests.cs" />
@@ -74,6 +75,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
