--- a/Source/Projects/NCore/NCore.csproj
+++ b/Source/Projects/NCore/NCore.csproj
@@ -50,6 +50,7 @@
     <Compile Include="IStringConverter.cs" />
     <Compile Include="NCoreException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reflections\CopyObject.cs" />
     <Compile Include="StringConverter.cs" />
     <Compile Include="Reflections\TypeExtensions.cs" />
     <Compile Include="Resources\ExceptionMessages.Designer.cs">
