--- a/Source/Tests/NCore.Tests.UnitTests/NCore.Tests.UnitTests.csproj
+++ b/Source/Tests/NCore.Tests.UnitTests/NCore.Tests.UnitTests.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Collections\DictionaryExtensionsTests.cs" />
     <Compile Include="Cryptography\HashServiceTests.cs" />
     <Compile Include="Expressions\ExpressionExtensionsTests.cs" />
+    <Compile Include="Reflections\CopyObjectTests.cs" />
     <Compile Include="Reflections\TypeExtensionsIsAnyFooTypeTests.cs" />
     <Compile Include="Reflections\TypeExtensionsIsFooTypeTests.cs" />
     <Compile Include="StringConverterTests.cs" />
