--- a/Deploy/NCore.nuspec
+++ b/Deploy/NCore.nuspec
@@ -17,6 +17,6 @@
   </metadata>
   <files>
     <file src="NCore.dll" target="lib" />
-	<file src="License.txt" />
+	<file src="License*.txt" />
   </files>    
 </package>
