--- a/Deploy/NCore.nuspec
+++ b/Deploy/NCore.nuspec
@@ -16,7 +16,7 @@
 	<tags>core,utils,helpers,extensions</tags>
   </metadata>
   <files>
-    <file src="**\*.dll" target="lib\net40\"/>
-	<file src="**\*.xml" target="lib\net40\"/>
+    <file src="**\NCore*.dll" target="lib\net40\"/>
+	<file src="**\NCore*.xml" target="lib\net40\"/>
   </files>    
 </package>
