--- a/Source/Projects/NCore/NCore.csproj
+++ b/Source/Projects/NCore/NCore.csproj
@@ -60,6 +60,7 @@
       <DependentUpon>ExceptionMessages.resx</DependentUpon>
     </Compile>
     <Compile Include="StringExtensions.cs" />
+    <Compile Include="SysDateTime.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\ExceptionMessages.resx">
