--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-#v0.4
+#v0.9
 # Dev stuff
 [Aa]pp_[Dd]ata/
 [Bb]uilds/
@@ -8,19 +8,29 @@
 [Tt]est[Rr]esult/
 [Tt]emp/
 [Pp]ackages/
-![Pp]ackages/repositories.config
-*.vspscc
-*.vssscc
-*.suo
 *.cache
-*.user
 *~
-_ReSharper.*
-*.resharper*
-*.[Rr]e[Ss]harper.user
 *.swp
 *.sdf
 *.orig
+
+#resharper#
+_ReSharper.*
+*.resharper*
+*.[Rr]e[Ss]harper.user
+
+#vs#
+*.user
+*.vspscc
+*.vssscc
+*.suo
+*.Publish.xml
+
+#approvals#
+*.received.txt
+
+#webstorm#
+.idea/
 
 #windows stuff
 Thumbs.db
