--- a/Source/Projects/NCore/NCore.csproj
+++ b/Source/Projects/NCore/NCore.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Cryptography\Crc32Algorithm.cs" />
     <Compile Include="Cryptography\IHashService.cs" />
     <Compile Include="DefaultFormatting.cs" />
+    <Compile Include="Disposer.cs" />
     <Compile Include="Expressions\ExpressionExtensions.cs" />
     <Compile Include="IFormatting.cs" />
     <Compile Include="IStringConverter.cs" />
