--- a/Source/Tests/NCore.Tests.UnitTests/NCore.Tests.UnitTests.csproj
+++ b/Source/Tests/NCore.Tests.UnitTests/NCore.Tests.UnitTests.csproj
@@ -47,6 +47,7 @@
     </Compile>
     <Compile Include="Collections\DictionaryExtensionsTests.cs" />
     <Compile Include="Cryptography\HashServiceTests.cs" />
+    <Compile Include="DisposerTests.cs" />
     <Compile Include="Expressions\ExpressionExtensionsTests.cs" />
     <Compile Include="Reflections\CopyObjectTests.cs" />
     <Compile Include="Reflections\TypeExtensionsIsAnyFooTypeTests.cs" />
