--- a/Source/Tests/NCore.Tests.UnitTests/NCore.Tests.UnitTests.csproj
+++ b/Source/Tests/NCore.Tests.UnitTests/NCore.Tests.UnitTests.csproj
@@ -46,6 +46,7 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Collections\DictionaryExtensionsTests.cs" />
+    <Compile Include="Collections\EnumerableExtensionsTests.cs" />
     <Compile Include="Cryptography\HashServiceTests.cs" />
     <Compile Include="DisposerTests.cs" />
     <Compile Include="Expressions\ExpressionExtensionsTests.cs" />
