--- a/Source/Projects/NCore/NCore.csproj
+++ b/Source/Projects/NCore/NCore.csproj
@@ -68,6 +68,7 @@
     </Compile>
     <Compile Include="StringExtensions.cs" />
     <Compile Include="SysDateTime.cs" />
+    <Compile Include="Try.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\ExceptionMessages.resx">
