--- a/Deploy/NCore.nuspec
+++ b/Deploy/NCore.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>NCore</id>    
     <title>NCore</title>
-	<version>0.0.0.0</version>
+	<version>$version$</version>
 	<authors>Daniel Wertheim</authors>
 	<copyright>Daniel Wertheim</copyright>
 	<summary>Core lib with helpers, utils and extensions.</summary>
