--- a/Source/Projects/NCore/NCore.csproj
+++ b/Source/Projects/NCore/NCore.csproj
@@ -69,6 +69,11 @@
     <Compile Include="StringExtensions.cs" />
     <Compile Include="SysDateTime.cs" />
     <Compile Include="Try.cs" />
+    <Compile Include="Validation\IObjectValidator.cs" />
+    <Compile Include="Validation\IValidate.cs" />
+    <Compile Include="Validation\ObjectValidator.cs" />
+    <Compile Include="Validation\Violation.cs" />
+    <Compile Include="Validation\ViolationsContainer.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\ExceptionMessages.resx">
